# brittlq

./: .editorconfig  .gitignore  Cargo.toml  Endpoints.md  README.md  Settings.toml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml  nginx.conf  start.sh  webserver.dockerfile
.github/workflows/: ci.yml  rust.yml  superlinter.yml
frontend/: .env.local.base  .eslintrc.js  .gitignore  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/assets/css/: tailwind.css
frontend/components/chat/: Message.vue
frontend/components/commands/: Command.vue  MetaSettings.vue  OBSSettings.vue
frontend/components/obs/: Source.vue
frontend/components/queue/: controls.vue  entry.vue
frontend/pages/: about.vue  index.vue  queue.vue
frontend/src/: App.vue  main.js  main.ts
frontend/src/assets/: tailwind.css
frontend/src/components/: Queue.vue  QueueControls.vue  QueueEntry.vue
frontend/src/components/chat/: Message.vue  Messages.vue
frontend/src/components/commands/: ChatSettings.vue  OBSSettings.vue
frontend/src/components/layout/: Navbar.vue
frontend/src/components/obs/: Source.vue
frontend/src/components/queue/: QueueControls.vue  QueueEntry.vue
frontend/src/obs/: connection.js  enable-source.js  get-source-settings.js  get-sources.js  index.js
frontend/src/router/: index.js  index.ts
frontend/src/store/: axios.js  commands.ts  get-token.js  index.js  index.ts  mutations.js  mutations.ts  obs.ts  persist.ts  queue.ts  twitch-chat.ts  twitch.ts
frontend/src/store/obs/: index.js  index.ts  mutations.js  operations.ts
frontend/src/store/queue/: index.js  index.ts  operations.js  operations.ts
frontend/src/store/twitch/: index.ts  operations.ts
frontend/src/store/twitch/chat/: index.ts  operations.ts
frontend/src/utils/: logging.ts
frontend/src/views/: About.vue  Commands.vue  OBS.vue  Queue.vue  Settings.vue
frontend/store/: index.ts  persist.ts
migrations/: 20220120220452_create_queue_table.up.sql  20220120222740_add_name_to_queues.down.sql  20220120222740_add_name_to_queues.up.sql
src/: chatbot.rs  config.rs  lib.rs  main.rs  server.rs
src/chatbot/: actions.rs  commands.rs  mod.rs
src/server/: mod.rs  queue.rs
src/utils/: bot.rs  chatbot.rs  handlers.rs  mod.rs  server.rs
test/: test_commands.json
www/: README.md  package-lock.json  package.json
www/src/: App.vue
www/src/components/: Queue.vue  QueueEntry.vue
