[package]
name = "qbot"
version = "0.4.0"
authors = ["Eric Huff <thegreaterici@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.10.1"
futures = "0.3"
irc = "0.15"
reqwest = "0.11"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3"
