[package]
name = "brittlq"
version = "0.4.0"
authors = ["Eric Huff <thegreaterici@gmail.com>"]
edition = "2018"

[lib]
name = "brittlq"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config = "0.11"
dotenv = "0.15"
futures = "0.3"
irc = "0.15"
peg = "0.8.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["json", "postgres", "runtime-tokio-native-tls"]}
thiserror = "1.0"
time = { version = "0.3.5", features = ["serde", "formatting", "local-offset"] }
tokio = { version = "1.2", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["registry", "env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
